--- a/gradle/build-config.gradle
+++ b/gradle/build-config.gradle
@@ -4,6 +4,9 @@ repositories {
     mavenLocal()
 }
 
+// Properties
+group = "uk.co.serin.thule"
+
 // Integration test configuration
 configurations {
     itestCompile.extendsFrom testCompile
@@ -27,14 +30,14 @@ task itest(type: Test, dependsOn: testClasses) {
 // Log test results summary
 tasks.withType(Test) {
     testLogging {
-        // set options for log level LIFECYCLE
+        // Set options for log level LIFECYCLE
         events "passed", "skipped", "failed", "standardOut"
         exceptionFormat "short"
         showCauses true
         showExceptions true
         showStackTraces true
 
-        // set options for log level DEBUG and INFO
+        // Set options for log level DEBUG and INFO
         debug {
             events "started", "passed", "skipped", "failed", "standardOut", "standardError"
             exceptionFormat "full"
@@ -43,7 +46,7 @@ tasks.withType(Test) {
         info.exceptionFormat = debug.exceptionFormat
 
         afterSuite { desc, result ->
-            if (!desc.parent) { // will match the outermost suite
+            if (!desc.parent) { // Will match the outermost suite
                 def output = "Results: ${result.resultType} (${result.testCount} tests, ${result.successfulTestCount} successes, ${result.failedTestCount} failures, ${result.skippedTestCount} skipped)"
                 def startItem = "|  ", endItem = "  |"
                 def repeatLength = startItem.length() + output.length() + endItem.length()
