--- a/gradle/plugin-sonarqube-config.gradle
+++ b/gradle/plugin-sonarqube-config.gradle
@@ -1,7 +1,15 @@
+ext {
+    // Set default values for properties that can be overridden
+    sonarHost = project.hasProperty("sonarHost") ? project.getProperty("sonarHost") : "pooh"
+    sonarPort = project.hasProperty("sonarPort") ? project.getProperty("sonarPort") : 9000
+    sonarProjectNameSuffix = project.hasProperty("sonarProjectNameSuffix") ? project.getProperty("sonarProjectNameSuffix") : System.properties["user.name"]
+}
+
 sonarqube {
     properties {
-        property "sonar.host.url", "http://pooh:9000"
+        property "sonar.host.url", "http://" + sonarHost + ":" + sonarPort
         property "sonar.scm.disabled", "true"
-        property "sonar.projectName", project.description + " [" + project.name + "]"
+        property "sonar.projectKey", project.group + ":" + project.name + ":" + sonarProjectNameSuffix
+        property "sonar.projectName", project.description + " [" + sonarProjectNameSuffix + "]"
     }
 }
