--- a/thule-people-service/src/main/resources/config/application.yml
+++ b/thule-people-service/src/main/resources/config/application.yml
@@ -9,15 +9,9 @@ eureka:
       defaultZone: http://${thule.discovery.service.host:localhost}:${thule.discovery.service.port:8761}/eureka/
 
 # Spring actuator configuration
-endpoints:
-  sensitive: false
 info:
   description: Thule People Service
   name: ${spring.application.name}
-management:
-  security:
-    # Disabled to enable health endpoint to show complete health rather than just 'status'
-    enabled: false
 
 # Spring logging
 logging:
@@ -29,13 +23,6 @@ logging:
     jdbc.sqltiming: error
     org.springframework: info
     uk.co.serin: trace
-
-# Spring security configuration
-security:
-  user:
-    name: admin
-    password: admin
-    role: USER
 
 # Spring server configuration
 server:
@@ -54,9 +41,10 @@ spring:
       # absolute time (i.e. a long), not particularly meaningful unless we instruct jackson to
       # serialize it as a timestamp which is a human readable form
       write_dates_as_timestamps: false
-  jpa:
-    hibernate:
-      ddl-auto: validate
+  security:
+    user:
+      password: user
+      roles: USER,ADMIN
   sleuth:
       sampler:
         percentage: 1.0
