--- a/thule-spring-boot-starters/build.gradle
+++ b/thule-spring-boot-starters/build.gradle
@@ -11,12 +11,13 @@ buildscript {
 }
 
 plugins {
-    id "com.github.ben-manes.versions" version "0.17.0"
+    id "com.github.ben-manes.versions" version "0.17.0" apply(false)
     id "org.sonarqube" version "2.6.2" apply(false)
     id "org.springframework.boot" version "2.0.0.RELEASE" apply(false)
 }
 
 subprojects {
+    apply plugin: "com.github.ben-manes.versions"
     apply plugin: "io.spring.dependency-management"
     apply plugin: "jacoco"
     apply plugin: "java"
