--- a/thule-discovery-service/src/itest/docker/docker-compose.yml
+++ b/thule-discovery-service/src/itest/docker/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     environment:
       SPRING_CLOUD_CONFIG_ENABLED: "false"
       SPRING_CLOUD_CONFIG_FAILFAST: "false"
-      TZ: Europe/London
+      TZ: UTC
     extra_hosts:
       - logstash-host:172.17.0.1
       - zipkin-host:172.17.0.1
