--- a/gradle/build-config.gradle
+++ b/gradle/build-config.gradle
@@ -28,7 +28,7 @@ task itest(type: Test) {
     // Propogate any system properties to the integration tests, e.g. spring.profiles.include
     systemProperties(System.getProperties())
 
-    // Only run the integration tests if the unit tests pass
+    // Must after the unit tests
     mustRunAfter tasks.test
 }
 
