--- a/gradle/build-config-with-spring-boot-1.5.x-config.gradle
+++ b/gradle/build-config-with-spring-boot-1.5.x-config.gradle
@@ -13,8 +13,8 @@ apply from: "${rootDir}/../gradle/build-itest-config.gradle"
 apply from: "${rootDir}/../gradle/build-test-config.gradle"
 
 // Include bespoke gradle plugin config
-apply from: "${rootDir}/../gradle/plugin-docker-config.gradle"
+apply from: "${rootDir}/../gradle/plugin-docker-with-spring-boot-1.5.x-config.gradle"
 apply from: "${rootDir}/../gradle/plugin-jacoco-config.gradle"
 apply from: "${rootDir}/../gradle/plugin-maven-publish-config.gradle"
 apply from: "${rootDir}/../gradle/plugin-sonarqube-config.gradle"
-apply from: "${rootDir}/../gradle/plugin-spring-boot-config.gradle"
+apply from: "${rootDir}/../gradle/plugin-spring-boot-with-spring-boot-1.5.x-config.gradle"
