--- a/thule-spring-boot-starters/build.gradle
+++ b/thule-spring-boot-starters/build.gradle
@@ -29,6 +29,7 @@ subprojects {
     apply from: "${rootDir}/../gradle/build-config.gradle"
 
     // Non-standard Serin gradle plugin config
+    tasks.docker.onlyIf { false } // Don't need a docker container
     bootJar.enabled = false // Don't need an "über-jar" but still want the rest of the spring boot plugin
     jar.enabled = true // Don't need an "über-jar" but still want the rest of the spring boot plugin
 }
