--- a/thule-spring-boot-starters/build.gradle
+++ b/thule-spring-boot-starters/build.gradle
@@ -12,6 +12,7 @@ buildscript {
 
 plugins {
     id "com.github.ben-manes.versions" version "0.17.0" apply(false)
+    id "com.palantir.docker" version "0.19.2" apply(false)
     id "org.sonarqube" version "2.6.2" apply(false)
     id "org.springframework.boot" version "2.0.0.RELEASE" apply(false)
 }
