Gitflow rules enforcement for gradle builds improvements

--- a/thule-spring-boot-starters/build.gradle
+++ b/thule-spring-boot-starters/build.gradle
@@ -19,6 +19,7 @@ plugins {
 
 subprojects {
     apply plugin: "com.github.ben-manes.versions"
+    apply plugin: "com.palantir.docker"
     apply plugin: "io.spring.dependency-management"
     apply plugin: "jacoco"
     apply plugin: "java"
