Refactored maven publishing required properties

--- a/thule-people-service/gradle.properties
+++ b/thule-people-service/gradle.properties
@@ -1,4 +1,6 @@
 description = Thule People Service
+group=uk.co.serin.thule
+version=1.0.0-SNAPSHOT
+
 nexusHost=pooh
 nexusPort=8081
-version = 1.0.0-SNAPSHOT
