--- a/thule-admin-server/gradle.properties
+++ b/thule-admin-server/gradle.properties
@@ -1,4 +1,6 @@
-description = Thule Admin Server
+description=Thule Admin Server
+group=uk.co.serin.thule
+version=1.0.0-SNAPSHOT
+
 nexusHost=pooh
 nexusPort=8081
-version = 1.0.0-SNAPSHOT
