--- a/thule-edge-server/gradle.properties
+++ b/thule-edge-server/gradle.properties
@@ -1,4 +1,6 @@
 description = Thule Edge Server
+group=uk.co.serin.thule
+version=1.0.0-SNAPSHOT
+
 nexusHost=pooh
 nexusPort=8081
-version = 1.0.0-SNAPSHOT
