--- a/thule-spring-boot-starters/gradle.properties
+++ b/thule-spring-boot-starters/gradle.properties
@@ -1,4 +1,6 @@
 description = Thule Spring Boot Starters
+group=uk.co.serin.thule
+version=1.0.0-SNAPSHOT
+
 nexusHost=pooh
 nexusPort=8081
-version = 1.0.0-SNAPSHOT
