--- a/thule-cloud/build.gradle
+++ b/thule-cloud/build.gradle
@@ -29,6 +29,7 @@ tasks.docker.onlyIf { false } // Don't need a docker container
 bootJar.enabled = false // Don't need an "über-jar" but still want the rest of the spring boot plugin
 jar.enabled = true // Don't need an "über-jar" but still want the rest of the spring boot plugin
 
+// Dependencies
 dependencies {
     itestCompile("uk.co.serin.thule:thule-spring-boot-starter-test:1.0.0-SNAPSHOT") { changing = true }
     itestCompile("uk.co.serin.thule:thule-spring-boot-starter-utils:1.0.0-SNAPSHOT") { changing = true }
