--- a/thule-config-service/build.gradle
+++ b/thule-config-service/build.gradle
@@ -63,6 +63,7 @@ task processResourcesFromMicroServices {
     }
 }
 
+// Dependencies
 dependencyManagement {
     imports {
         mavenBom("org.springframework.cloud:spring-cloud-dependencies:Finchley.M8")
