--- a/thule-discovery-service/build.gradle
+++ b/thule-discovery-service/build.gradle
@@ -30,6 +30,7 @@ apply from: "${rootDir}/../gradle/build-config.gradle"
 //        jvmArgs += ["--add-modules", "java.xml.bind"]
 //    }
 
+// Dependencies
 dependencyManagement {
     imports {
         mavenBom("org.springframework.cloud:spring-cloud-dependencies:Finchley.M8")
