--- a/thule-edge-server/build.gradle
+++ b/thule-edge-server/build.gradle
@@ -24,6 +24,7 @@ apply plugin: "io.spring.dependency-management"
 // Standard Serin gradle plugin config
 apply from: "${rootDir}/../gradle/build-config.gradle"
 
+// Dependencies
 dependencyManagement {
     imports {
         mavenBom("org.springframework.cloud:spring-cloud-dependencies:Finchley.M8")
