--- a/thule-edge-server/src/main/resources/config/application.yml
+++ b/thule-edge-server/src/main/resources/config/application.yml
@@ -33,7 +33,7 @@ spring:
 
 # Zuul configuration
 zuul:
-  # Defaults to Cookie,Set-Cookie,Authorization but means the basic authentication header will not propogate to the people service,
+  # Defaults to Cookie,Set-Cookie,Authorization but means the basic authentication header will not Propagate to the people service,
   # hence Authorization has been removed from the sensitive headers
   sensitiveHeaders: Cookie,Set-Cookie
 
