--- a/thule-people-service/build.gradle
+++ b/thule-people-service/build.gradle
@@ -38,6 +38,7 @@ sonarqube {
 //        jvmArgs += ["--add-modules", "java.xml.bind"]
 //    }
 
+// Dependencies
 dependencyManagement {
     imports {
         mavenBom("org.springframework.cloud:spring-cloud-dependencies:Finchley.M8")
