--- a/thule-repository-mongodb/build.gradle
+++ b/thule-repository-mongodb/build.gradle
@@ -35,6 +35,7 @@ sonarqube {
     }
 }
 
+// Dependencies
 dependencies {
     compile("uk.co.serin.thule:thule-spring-boot-starter-utils:1.0.0-SNAPSHOT") { changing = true }
     compile("net.logstash.logback:logstash-logback-encoder:5.0")
