--- a/thule-spring-boot-starters/build.gradle
+++ b/thule-spring-boot-starters/build.gradle
@@ -36,6 +36,7 @@ subprojects {
     jar.enabled = true // Don't need an "über-jar" but still want the rest of the spring boot plugin
 }
 
+// Dependencies
 project("thule-spring-boot-starter-test") {
     description = "Thule Spring Boot Starter Test"
     dependencies {
