--- a/thule-people-service/src/itest/resources/config/application-hsql.yml
+++ b/thule-people-service/src/itest/resources/config/application-hsql.yml
@@ -1,6 +1,6 @@
 # Spring configuration
 spring:
   datasource:
+    driver-class-name: net.sf.log4jdbc.DriverSpy
     url: jdbc:log4jdbc:hsqldb:mem:testdb
-  flyway:
-    locations: classpath:flyway/hsql/migration
+
