--- a/thule-people-service/src/itest/resources/config/application-mysql.yml
+++ b/thule-people-service/src/itest/resources/config/application-mysql.yml
@@ -1,11 +1,13 @@
 # Spring configuration
 spring:
   datasource:
+    driver-class-name: net.sf.log4jdbc.DriverSpy
     password: thule
     url: jdbc:log4jdbc:mysql://mysql-host:3306/thule
     username: thule
   flyway:
     baseline-on-migrate: true
+    enabled: true
     locations: classpath:flyway/mysql/migration
     password: mysql
     url: jdbc:mysql://mysql-host:3306/mysql
