--- a/thule-people-service/src/itest/resources/config/application-oracle.yml
+++ b/thule-people-service/src/itest/resources/config/application-oracle.yml
@@ -1,11 +1,13 @@
 # Spring configuration
 spring:
   datasource:
+    driver-class-name: net.sf.log4jdbc.DriverSpy
     password: thule
     url: jdbc:log4jdbc:oracle:thin:@oracle-host:1521:xe
     username: thule
   flyway:
     baseline-on-migrate: true
+    enabled: true
     locations: classpath:flyway/oracle/migration
     password: oracle
     url: jdbc:oracle:thin:@oracle-host:1521:xe
