--- a/thule-people-service/build.gradle
+++ b/thule-people-service/build.gradle
@@ -33,6 +33,16 @@ sonarqube {
         property "sonar.cpd.exclusions", "**/domain/**"
     }
 }
+itest {
+    // Remove docker container once the integration tests have completed
+    afterSuite { descriptor ->
+        if (descriptor.getName().contains("Gradle Test Executor")) {
+            exec {
+                commandLine "docker-compose", "-f", "src/itest/docker/$project.name/docker-compose-mysql.yml", "rm", "-fsv"
+            }
+        }
+    }
+}
 // Required for Java9
 //    tasks.withType(Test) {
 //        jvmArgs += ["--add-modules", "java.xml.bind"]
@@ -50,7 +60,6 @@ dependencies {
     compile("com.googlecode.log4jdbc:log4jdbc:1.2")
     compile("com.h2database:h2")
     compile("net.logstash.logback:logstash-logback-encoder:5.0")
-    compile("org.flywaydb:flyway-core")
     compile("org.jolokia:jolokia-core") // Required for JMX support when using the Admin server
     compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
@@ -71,5 +80,6 @@ dependencies {
 
     itestCompile("com.oracle:ojdbc6:11.2.0.1.0")
     itestCompile("mysql:mysql-connector-java")
+    itestCompile("org.flywaydb:flyway-core")
     itestCompile("org.hsqldb:hsqldb")
 }
