Gradle plugins are now proxied by nexus

--- a/thule-spring-boot-starters/settings.gradle
+++ b/thule-spring-boot-starters/settings.gradle
@@ -3,3 +3,10 @@ pluginManagement {
         maven { url "http://pooh:8081/repository/maven-public" }
     }
 }
+
+rootProject.name = "thule-spring-boot-starters"
+
+include "thule-spring-boot-starter-test"
+include "thule-spring-boot-starter-utils"
+include "thule-test"
+include "thule-utils"
