--- a/thule-people-service/src/itest/docker/thule-people-service/docker-compose-mysql.yml
+++ b/thule-people-service/src/itest/docker/thule-people-service/docker-compose-mysql.yml
@@ -5,7 +5,7 @@ services:
     image: mysql
     environment:
       MYSQL_ROOT_PASSWORD: root
-      TZ: UTC
+      TZ: Europe/London
     ports:
       - 3307:3306
     restart: always
