--- a/thule-repository-mongodb/src/itest/docker/thule-repository-mongodb/docker-compose-mongo.yml
+++ b/thule-repository-mongodb/src/itest/docker/thule-repository-mongodb/docker-compose-mongo.yml
@@ -4,7 +4,7 @@ services:
   mongo:
     image: mongo
     environment:
-      TZ: UTC
+      TZ: Europe/London
     ports:
       - 27017:27017
     restart: always
