Refactoring in preparation for ctests

--- a/gradle/build-config.gradle
+++ b/gradle/build-config.gradle
@@ -7,6 +7,7 @@ repositories {
 // Include bespoke gradle config
 apply from: "${rootDir}/../gradle/build-gitflow-config.gradle"
 apply from: "${rootDir}/../gradle/build-itest-config.gradle"
+apply from: "${rootDir}/../gradle/build-ctest-config.gradle"
 apply from: "${rootDir}/../gradle/build-test-config.gradle"
 
 // Include bespoke gradle plugin config
