--- a/gradle/build-itest-config.gradle
+++ b/gradle/build-itest-config.gradle
@@ -16,6 +16,6 @@ task itest(type: Test) {
     testClassesDirs = sourceSets.itest.output.classesDirs
     classpath = sourceSets.itest.runtimeClasspath
 
-    // Must run after the unit tests
-    mustRunAfter tasks.test
+    // Should run after the unit tests
+    shouldRunAfter tasks.test
 }
