--- a/thule-spring-boot-starters/build.gradle
+++ b/thule-spring-boot-starters/build.gradle
@@ -32,7 +32,8 @@ subprojects {
     apply from: "${rootDir}/../gradle/build-config.gradle"
 
     // Non-standard Serin gradle plugin config
-    tasks.docker.onlyIf { false } // Don't need a docker container
+    tasks.docker.enabled = false // Don't need a docker image created
+    tasks.dockerTag.enabled = false // Don't need a docker image created
     bootJar.enabled = false // Don't need an "über-jar" but still want the rest of the spring boot plugin
     jar.enabled = true // Don't need an "über-jar" but still want the rest of the spring boot plugin
 }
