--- a/gradle/build-config-with-spring-boot-1.5.x-config.gradle
+++ b/gradle/build-config-with-spring-boot-1.5.x-config.gradle
@@ -4,12 +4,10 @@ repositories {
     mavenLocal()
 }
 
-// Properties
-group = "uk.co.serin.thule"
-
 // Include bespoke gradle config
 apply from: "${rootDir}/../gradle/build-gitflow-config.gradle"
 apply from: "${rootDir}/../gradle/build-itest-config.gradle"
+apply from: "${rootDir}/../gradle/build-ctest-config.gradle"
 apply from: "${rootDir}/../gradle/build-test-config.gradle"
 
 // Include bespoke gradle plugin config
