--- a/thule-cloud/build.gradle
+++ b/thule-cloud/build.gradle
@@ -26,15 +26,16 @@ apply from: "${rootDir}/../gradle/build-config.gradle"
 
 // Non-standard Serin gradle plugin config
 tasks.docker.onlyIf { false } // Don't need a docker container
+tasks.dockerTag.onlyIf { false } // Don't need a docker container
 bootJar.enabled = false // Don't need an "über-jar" but still want the rest of the spring boot plugin
 jar.enabled = true // Don't need an "über-jar" but still want the rest of the spring boot plugin
 
 // Dependencies
 dependencies {
-    itestCompile("uk.co.serin.thule:thule-spring-boot-starter-test:1.0.0-SNAPSHOT") { changing = true }
-    itestCompile("uk.co.serin.thule:thule-spring-boot-starter-utils:1.0.0-SNAPSHOT") { changing = true }
-    itestCompile("org.springframework.boot:spring-boot-starter-actuator")
-    itestCompile("org.springframework.boot:spring-boot-starter-logging")
-    itestCompile("org.springframework.boot:spring-boot-starter-web")
-    itestCompile("org.springframework.retry:spring-retry")
+    ctestCompile("uk.co.serin.thule:thule-spring-boot-starter-test:1.0.0-SNAPSHOT") { changing = true }
+    ctestCompile("uk.co.serin.thule:thule-spring-boot-starter-utils:1.0.0-SNAPSHOT") { changing = true }
+    ctestCompile("org.springframework.boot:spring-boot-starter-actuator")
+    ctestCompile("org.springframework.boot:spring-boot-starter-logging")
+    ctestCompile("org.springframework.boot:spring-boot-starter-web")
+    ctestCompile("org.springframework.retry:spring-retry")
 }
