--- a/thule-config-service/src/main/docker/Dockerfile
+++ b/thule-config-service/src/main/docker/Dockerfile
@@ -1,21 +1,22 @@
 FROM openjdk:8-jre
 
 ################################  Create user  ################################
-ENV GID 1000
-ENV UID 1000
-ENV USER service
+ENV GID 1001
+ENV UID 1001
+ENV USER spring
 
 RUN \
     addgroup --gid $GID $USER && \
     adduser --disabled-password --gecos "" --gid $GID --shell /bin/bash --uid $UID $USER
 
 ################################  Install Spring Boot App ################################
-# Add a VOLUME pointing to "/tmp" because that is where a Spring Boot application creates working directories for Tomcat by default.
-VOLUME /tmp
-
 # Copy the app's jar file to the container
 ARG JAR_FILE
 COPY ${JAR_FILE} /
+
+################################  Expose private ports ################################
+# Tomcat port
+EXPOSE 8080
 
 ################################  Create entrypoint  ################################
 COPY docker-entrypoint.sh /
