--- a/thule-cloud/src/ctest/docker/thule-cloud/docker-compose.yml
+++ b/thule-cloud/src/ctest/docker/thule-cloud/docker-compose.yml
@@ -5,7 +5,9 @@ services:
     image: pooh:8082/thule-admin-server
     environment:
       THULE_CONFIG_SERVICE_HOST: thule-config-service
+      THULE_CONFIG_SERVICE_PORT: 8080
       THULE_DISCOVERY_SERVICE_HOST: thule-discovery-service
+      THULE_DISCOVERY_SERVICE_PORT: 8080
       TZ: Europe/London
     extra_hosts:
       - logstash-host:172.17.0.1
@@ -19,6 +21,7 @@ services:
     image: pooh:8082/thule-config-service
     environment:
       THULE_DISCOVERY_SERVICE_HOST: thule-discovery-service
+      THULE_DISCOVERY_SERVICE_PORT: 8080
       TZ: Europe/London
     extra_hosts:
       - logstash-host:172.17.0.1
@@ -32,6 +35,7 @@ services:
     image: pooh:8082/thule-discovery-service
     environment:
       THULE_CONFIG_SERVICE_HOST: thule-config-service
+      THULE_CONFIG_SERVICE_PORT: 8080
       TZ: Europe/London
     extra_hosts:
       - logstash-host:172.17.0.1
@@ -45,7 +49,9 @@ services:
     image: pooh:8082/thule-edge-server
     environment:
       THULE_CONFIG_SERVICE_HOST: thule-config-service
+      THULE_CONFIG_SERVICE_PORT: 8080
       THULE_DISCOVERY_SERVICE_HOST: thule-discovery-service
+      THULE_DISCOVERY_SERVICE_PORT: 8080
       TZ: Europe/London
     extra_hosts:
       - logstash-host:172.17.0.1
@@ -59,7 +65,9 @@ services:
     image: pooh:8082/thule-email-service
     environment:
       THULE_CONFIG_SERVICE_HOST: thule-config-service
+      THULE_CONFIG_SERVICE_PORT: 8080
       THULE_DISCOVERY_SERVICE_HOST: thule-discovery-service
+      THULE_DISCOVERY_SERVICE_PORT: 8080
       TZ: Europe/London
     extra_hosts:
       - logstash-host:172.17.0.1
@@ -73,7 +81,9 @@ services:
     image: pooh:8082/thule-people-service
     environment:
       THULE_CONFIG_SERVICE_HOST: thule-config-service
+      THULE_CONFIG_SERVICE_PORT: 8080
       THULE_DISCOVERY_SERVICE_HOST: thule-discovery-service
+      THULE_DISCOVERY_SERVICE_PORT: 8080
       TZ: Europe/London
     extra_hosts:
       - logstash-host:172.17.0.1
