Replaced pooh:8081 in gradle build to $nexusHost:$nexusPort

--- a/thule-admin-server/build.gradle
+++ b/thule-admin-server/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     repositories {
-        maven { url "http://pooh:8081/repository/maven-public" }
+        maven { url "http://$nexusHost:$nexusPort/repository/maven-public" }
         mavenLocal()
     }
 
