--- a/thule-cloud/settings.gradle
+++ b/thule-cloud/settings.gradle
@@ -1,5 +1,5 @@
 pluginManagement {
     repositories {
-        maven { url "http://pooh:8081/repository/maven-public" }
+        maven { url "http://$nexusHost:$nexusPort/repository/maven-public" }
     }
 }
