--- a/thule-spring-boot-starters/settings.gradle
+++ b/thule-spring-boot-starters/settings.gradle
@@ -1,6 +1,6 @@
 pluginManagement {
     repositories {
-        maven { url "http://pooh:8081/repository/maven-public" }
+        maven { url "http://$nexusHost:$nexusPort/repository/maven-public" }
     }
 }
 
